# phantom-mesh

./: .gitignore  Cargo.toml  Makefile  README.md
crates/bot/linux/: Cargo.toml
crates/bot/linux/src/: main.rs
crates/bot/linux/src/common/: constants.rs
crates/bot/linux/src/host/: mod.rs
crates/bot/linux/src/modules/: mod.rs
crates/bot/linux/src/p2p/: c2.rs
crates/bot/windows/: Cargo.toml  build.rs
crates/bot/windows/src/p2p/: c2.rs
crates/core/common/: Cargo.toml
crates/core/common/src/: discovery.rs  lib.rs  oracle.rs  time.rs
crates/core/common/src/discovery/: local.rs
crates/core/protocol/: Cargo.toml
crates/core/protocol/src/: lib.rs  packet.rs
crates/master/: Cargo.toml
crates/master/src/: commands.rs  crypto.rs  network.rs
crates/node/: Cargo.toml
crates/node/src/system/: c2.rs  transport.rs
crates/nodes/cloud/src/attack/: sack.zig  syn.zig  vse.zig
crates/nodes/edge/src/: bootstrapper.rs  main.rs
crates/nodes/mesh/: Cargo.toml
crates/nodes/mesh/src/: main.rs
crates/nodes/mesh/src/p2p/: c2.rs  (+7 more)
crates/nodes/phantom/: Cargo.toml
crates/nodes/phantom/src/: commands.rs  eth_broadcaster.rs  main.rs  network.rs  server.rs
crates/plugins/ddos/src/: lib.rs
crates/plugins/propagator/: Cargo.toml
crates/plugins/propagator/src/: main.rs
crates/protocol/src/: lib.rs
crates/shared/protocol/src/: wire.rs
scripts/: generate.sh
smart_contracts/: signal.sol
src/: commands.rs  main.rs
src/common/: constants.rs  mod.rs
src/system/: mod.rs  process.rs  registry.rs
test_feature/: Cargo.toml
test_feature/src/: main.rs
(+22 files in other folders)
