[workspace]
resolver = "2"
members = [
    # Core infrastructure
    "crates/core/protocol",
    "crates/core/common",
    
    # Node applications
    "crates/nodes/mesh",
    "crates/nodes/phantom",
    
    # Standalone tools
    # "crates/tools/loader",
    
    # Plugins
    "crates/plugins/propagator",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
